<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/gray_dark">

    <TextView
        android:id="@+id/tv_task_name"
        android:text="@string/task_name_"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_light"
        android:hint="@string/name"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_light" />

    <TextView
        android:layout_marginTop="12dp"
        android:text="@string/type"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/rg_task_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_task"
            android:checked="true"
            android:text="@string/task"
            android:buttonTint="@color/primary_light"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rb_pruchase"
            android:text="@string/purchase"
            android:buttonTint="@color/primary_light"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RadioGroup>

    <!-- <TextView
        android:id="@+id/tv_task_description"
        android:layout_marginTop="24dp"
        android:text="@string/task_description_"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/> -->

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/b_cancel"
            android:text="@string/cancel"
            android:background="@color/purple_200"
            android:backgroundTint="@color/primary_dark"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/b_save_task"
            android:text="@string/save"
            android:backgroundTint="@color/primary_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>